some fixes for layout on small devices

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
     gap: 33px;
     width: 100%;
     max-width: 580px;
-    margin: 50px auto;
+    margin: 20px auto;
 }
 
 .game__item {
@@ -43,11 +43,11 @@ body {
 .field {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 25px;
+    gap: 7%;
     width: 100%;
-    height: 100vh;
     max-height: 580px;
-    padding: 50px;
+    aspect-ratio: 1;
+    padding: 7%;
     background: #ffffff;
 }
 
@@ -86,17 +86,19 @@ body {
 
 .field__cell[data-fill="X"]::before {
     background: url(./assets/X.png) no-repeat center center;
+    background-size: 75%;
     opacity: 1;
 }
 
 .field__cell[data-fill="O"]::before {
     background: url(./assets/O.png) no-repeat center center;
+    background-size: 75%;
     opacity: 1;
 }
 
 .button {
     letter-spacing: 2%;
-    padding: calc(var(--font-size) / 2) calc(var(--font-size) * 2);
+    padding: 5px 10px;
 }
 
 .restart {
